--- a/detalleLocacion/detalleLocacion.html
+++ b/detalleLocacion/detalleLocacion.html
@@ -37,7 +37,8 @@
         </table>
         <hr />
         <h5 id="areaSeleccionada"></h5>
-        <div id="pokemons">
+        <div id="pokemons" class="row">
+
         </div>
 </body>
 
