--- a/detalleRegion/detalleRegion.html
+++ b/detalleRegion/detalleRegion.html
@@ -33,17 +33,21 @@
                 </tr>
             </thead>
             <tbody id="tablaLocaciones">
+                <tr>
+                    <td>
+                </tr>
             </tbody>
         </table>
         <nav aria-label="...">
-            <ul id="paginador" class="pagination">
-                <li class="page-item disabled"><span class="page-link">Previous</span></li>
+            <ul  style="display: flex; align-items: center; justify-content: center;" id="paginador" class="pagination">
+                <!--li class="page-item disabled"><span class="page-link">Previous</span></li>
                 <li class="page-item active"><button value="1" class="page-link">1</button></li>
                 <li class="page-item" aria-current="page"><span class="page-link">2</span></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li-->
             </ul>
         </nav>
+    </div>
 </body>
 
 </html>
